Fixing z-index

--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -1,12 +1,17 @@
 header{
-    height: 10vh;
-  }
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 10vh;
+  z-index: 200;
+}
   
 footer{
   width: 100%;
   position: absolute;;
   bottom:0;
   min-height: 8%;
+  z-index: 200;
 }
 
 main{
